--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ body {
   color: #333D4B;
   cursor: pointer;
 }
+.header__menu-btn {
+  display: none;
+}
 
 button {
   border-radius: 6px;
@@ -95,6 +98,9 @@ main .backround_conteiner {
   background-position: 0px -531px;
   border-radius: 10px;
   padding: 117px 85px;
+}
+main .backround_conteiner .tlo {
+  display: none;
 }
 main .backround_conteiner__content {
   width: 493px;
@@ -326,6 +332,7 @@ main .works_conteiner__items-text_article {
   text-align: left;
   color: #333D4B;
   margin-bottom: 42px;
+  padding-right: 30px;
 }
 main .works_conteiner__items-text_info {
   font-family: "Barlow";
